k8s/ingress_new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "catvsdog.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catvsdog-frontend-service
            port:
              number: 80
  - host: "catvsdogclasifier.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catvsdog-frontend-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: "catvsdog.example.com"
    http:
      paths:
      - path: /backend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: catvsdog-backend-service
            port:
              number: 8000
  - host: "catvsdogclasifier.com"
    http:
      paths:
      - path: /backend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: catvsdog-backend-service
            port:
              number: 8000
